# pyconapac2023-local-food-map

./: .gitignore  README.md  mapdata.csv  pyproject.toml  requirements.txt
code/: README.md  export_mapdata_to_printablehtml.py  generate_mapdata_fujinomiyayakisoba.py  generate_mapdata_fujinomiyayakisoba_selenium.py  pyproject.toml
code/src/: exam-cloud-vision-i2t.py  generate_fujinomiyayakisoba_mapdata.py  generate_mapdata_fujinomiyayakisoba.py  i2t_doctest.py
code/src/code/: __init__.py
slide/: furoku.md  note.md  slide.md
